--- a/TestResultsBlazorApp/Server/TestResultsBlazorApp.Server.csproj
+++ b/TestResultsBlazorApp/Server/TestResultsBlazorApp.Server.csproj
@@ -15,5 +15,19 @@
     <ProjectReference Include="..\Shared\TestResultsBlazorApp.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
 
 </Project>
