--- a/TestResultsBlazorApp/Shared/TestResultsBlazorApp.Shared.csproj
+++ b/TestResultsBlazorApp/Shared/TestResultsBlazorApp.Shared.csproj
@@ -8,4 +8,19 @@
     <ProjectReference Include="..\..\TestDatabase\TestDatabase.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="..\..\stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
